fixed alignment on projects

--- a/src/components/Pages/Pages.css
+++ b/src/components/Pages/Pages.css
@@ -5,3 +5,27 @@
   align-items: center;
   margin: 2rem;
 }
+
+.projectsection,
+.pagetext {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+@media all and (min-width: 1080px) {
+}
+
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+}
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+}
+
+@media all and (max-width: 480px) {
+}
